--- a/style.css
+++ b/style.css
@@ -13,3 +13,21 @@ table, th, td {
   margin-left: auto;
   margin-right: auto;
 }
+
+.btn {
+  border: none;
+  background-color: inherit;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.btn:hover {
+  background: #eee;
+}
+
+.buttons{
+  padding-top:20px;
+  text-align: center;
+}
